# Deep-Learning_MLP_CNN_RNN

./: README.md  main.py  pyproject.toml
CNN/: Notebook_Partie 2_ CNN.ipynb
MLP/: Notebook _Partie 1_ MLP.ipynb  best_mlp_custom.pth  best_mlp_sequential.pth
RNN/: Notebook_Partie 3_ RNN.ipynb
RNN/fra_eng_data/: fra.txt
Rapport/: Deep_Learning_Rapport_MLP_CNN_RNN_Hajar_Belhachmi_G2.docx
