[project]
name = "dl-pojet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchtext>=0.6.0",
    "torchvision>=0.26.0",
    "tqdm>=4.68.2",
]
